5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4381/executions/1670_1390.log
== TEST (2019-04-16 18:26:58) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:27:00) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.136026
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:27:02) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.180839
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:03) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:49) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:27:50) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.129339
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:51) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:55) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:56) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:58) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100)
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 2
    if(m<=100)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:37) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v = m * 1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:28:39) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.14658
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 3
    v = m * 1.2
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:40) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v = m * 1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:41) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v = m * 1.2
else:
v = (m * 1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v = m * 1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:20) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2
else:
v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:29:21) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2
else:
v=(m*1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.14647
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 3
    v=m*1.2
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:21) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2
else:
v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:22) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2
else:
v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:23) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2
else:
v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:59) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2:
else:
v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2:
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:30:00) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
v=m*1.2:
else:
v=(m*1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.14698
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 3
    v=m*1.2:
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:26) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
 v=m*1.2:
else:
 v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:30:27) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
 v=m*1.2:
else:
 v=(m*1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.195919
-- ERROR:
  File "/home/codebench/codes/1670/1390/main.py", line 3
    v=m*1.2:
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:28) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
 v=m*1.2:
else:
 v=(m*1.4) + 25
print(round(v,2))
-- ERROR:
File "XXXX", line 3
    v=m*1.2:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:32) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
 v=m*1.2
else:
 v=(m*1.4) + 25
print(round(v,2))
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:30:48) 
-- CODE:
m = float(input(" minutos:"))
if(m<=100):
 v=m*1.2
else:
 v=(m*1.4) + 25
print(round(v,2))
-- EXECUTION TIME:
0.207827
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
193.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
303.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
